# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  pre-commit  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: ci.yml
configuration/: base.yaml  local.yaml  production.yaml
githooks/: pre-commit
migrations/: 20230521211946_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  integration.rs
