[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Sasha Kiselev <sdkiselev1812@gmail.com>"]
license = "GPL"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.3", features = ["v4"] }
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
tracing = { version = "0.1.37", features = ["log"] }
serde-aux = "4.2.0"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
reqwest = "0.11.18"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

